--- a/admin-page/package.json
+++ b/admin-page/package.json
@@ -9,6 +9,7 @@
     "@mui/joy": "^5.0.0-alpha.71",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/styles": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
